--- a/requirements.txt
+++ b/requirements.txt
@@ -2,15 +2,34 @@ certifi==2024.7.4
 chardet==4.0.0
 customtkinter==5.2.2
 darkdetect==0.8.0
+EasyProcess==1.1
+entrypoint2==1.1
 idna==2.10
+jeepney==0.8.0
 Jinja2==3.0.1
 MarkupSafe==2.1.5
 msgpack==1.0.8
+mss==9.0.1
+numpy==2.0.1
 packaging==24.1
+pandas==2.2.2
 Pillow==8.4.0
+platformdirs==4.2.2
+pyscreenshot==3.1
+PySide6==6.7.2
+PySide6_Addons==6.7.2
+PySide6_Essentials==6.7.2
 python-can==4.4.2
+python-dateutil==2.9.0.post0
+python-tkdnd==0.2.1
+pytz==2024.1
+qt-material==2.14
 requests==2.25.1
+shiboken6==6.7.2
+six==1.16.0
 tk==0.1.0
+ttkwidgets==0.13.0
 typing_extensions==4.12.2
+tzdata==2024.1
 urllib3==1.26.19
 wrapt==1.16.0
